updated error span to be visible to stop form elements movement when error is observed

--- a/src/App.scss
+++ b/src/App.scss
@@ -368,6 +368,7 @@
     font-family: base.$font-mulish;
     font-size:large;
     font-weight: 400;
+    height: 23px;
 }
 
 #error-page {
